[project]
name = "nevercheese-pcileech-memprocfs-mcp"
version = "1.0.0"
description = "Linux-native MCP Server for PCILeech/MemProcFS - DMA memory operations via Model Context Protocol"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.23.3",
    "memprocfs>=5.0.0",
    "leechcorepyc>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["*.py", "config.json"]

[tool.black]
line-length = 100
target-version = ['py310']
